# EvtolSimulation

./: .gitignore  AnalyseData.py  AnalyzeData.py  CMakeLists.txt  Readme.md  RunEvtolSimulation.sh  RunEvtolSimulationTests.sh  RunScript.sh  makefile  results.html
include/: LocalSharedMemory.hpp  Observer.hpp  SimComponent.hpp  SimDispatcher.hpp  Vehicle.hpp
parameters/: Alpha_cBatteryCapacity.txt  Alpha_cEnergyUseAtCruise.txt  Alpha_cFaultProbPerHr.txt  Alpha_cPassengerCount.txt  Alpha_cTimeToCharge.txt  Beta_cCruiseSpeed.txt  Beta_cEnergyUseAtCruise.txt  Beta_cFaultProbPerHr.txt  Beta_cPassengerCount.txt  Beta_cTimeToCharge.txt  Charlie_cBatteryCapacity.txt  Charlie_cCruiseSpeed.txt  Charlie_cEnergyUseAtCruise.txt  Charlie_cFaultProbPerHr.txt  Charlie_cPassengerCount.txt  Delta_cBatteryCapacity.txt  Delta_cCruiseSpeed.txt  Delta_cEnergyUseAtCruise.txt  Delta_cFaultProbPerHr.txt  Delta_cTimeToCharge.txt  Echo_cBatteryCapacity.txt  Echo_cCruiseSpeed.txt  Echo_cEnergyUseAtCruise.txt  Echo_cFaultProbPerHr.txt  Echo_cPassengerCount.txt  Echo_cTimeToCharge.txt
results/: Average time charging (hrs).html  Average time in flight (hrs).html  Average time queue (hrs).html  Max number of faults.html  Number of vehicles spawned.html  Simulation Collect.html  Total passenger-miles.html
src/: 01SimulationMain.cpp  ChargingQueue.cpp  ChargingQueue.hpp  CommonDefines.hpp  LocalSharedMemory.cpp  LocalSharedMemory.hpp  Observer.cpp  Observer.hpp  SimComponent.cpp  SimComponent.hpp  SimDispatcher.cpp  SimDispatcher.hpp  SimulationMain.cpp  Vehicle.cpp  Vehicle.hpp
tests/: TestingMain.cpp
